--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -5,7 +5,8 @@ layout: default
 <link rel="stylesheet" href="/js/prettify/prettify.css" />
 <style type="text/css">
   html {
-    background: url({{ site.myblog.postbgimg }}) no-repeat center center fixed;
+    /*background: url({{ site.myblog.postbgimg }}) no-repeat center center fixed;*/
+    background: #333333;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
@@ -52,8 +53,9 @@ layout: default
     <div class="myinfo"><center>
       <div id="avatarHolder" class="avatar circle" style="width: 0px; height: 0px; box-shadow: none; margin-bottom: 20px;"></div>
       <a href="/index.html" title="Homepage"><i class="icon-home icon-large"></i> Home</a>
-      <a href="http://www.linkedin.com/pub/yu-li/6/3a4/499" title="Who am I?"><i class="icon-linkedin-sign icon-large"></i> Profile</a>
-      <a href="http://www.github.com/liyu1981?tab=repositories" title="What do I do?"><i class="icon-github icon-large"></i> Code</a>
+      <a href="{{ site.myblog.linkedin }}"><i class="icon-linkedin-sign icon-large"></i><span> Profile</span></a>
+      <a href="{{ site.myblog.github }}"><i class="icon-github icon-large"></i><span> Code</span></a>
+      <a href="{{ site.myblog.github }}"><i class="icon-envelope-alt icon-large"></i><span> Mail</span></a>
     </center></div>
     <div id="menu"></div>
   </div>
