--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -58,7 +58,7 @@ layout: default
       <a href="/index.html" title="Homepage"><i class="icon-home icon-large"></i> Home</a>
       <a href="{{ site.myblog.linkedin }}"><i class="icon-linkedin-sign icon-large"></i><span> Profile</span></a>
       <a href="{{ site.myblog.github }}"><i class="icon-github icon-large"></i><span> Code</span></a>
-      <a href="{{ site.myblog.github }}"><i class="icon-envelope-alt icon-large"></i><span> Mail</span></a>
+      <a href="{{ site.myblog.email }}"><i class="icon-envelope-alt icon-large"></i><span> Mail</span></a>
     </center></div>
     <div id="menu"></div>
   </div>
