add share button

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -27,7 +27,17 @@ layout: default
     <h1 class="entry-title"><a href="{{ page.url }}" title="{{ page.title }}">{{ page.title }}</a></h1>
 
     <p class="entry-date">{{ page.date|date:"%Y-%m-%d" }} <span class="lastModified" style="display: none;" data-source="{{ page.path }}">最后更新时间: </span></p>
-
+<!--  -->
+<div class="ds-share" data-thread-key="{{ page.id }}" data-title="{{ page.title }}"
+     data-images="http://www.uimaker.com/uploads/allimg/111101/1_111101085050_5.png" data-content="content"
+     data-url="http://litaotao.github.io/{{ page.id }}">
+    <div class="ds-share-aside-left">
+      <div class="ds-share-aside-inner">
+      </div>
+      <div class="ds-share-aside-toggle">分享到</div>
+    </div>
+</div>
+<!--  -->
     {{ content }}
 
     <div id="disqus_container">
@@ -43,7 +53,7 @@ layout: default
           ds.type = 'text/javascript';ds.async = true;
           ds.src = (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//static.duoshuo.com/embed.js';
           ds.charset = 'UTF-8';
-          (document.getElementsByTagName('head')[0] 
+          (document.getElementsByTagName('head')[0]
            || document.getElementsByTagName('body')[0]).appendChild(ds);
         })();
         </script>
