--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -27,18 +27,20 @@ layout: default
     <h1 class="entry-title"><a href="{{ page.url }}" title="{{ page.title }}">{{ page.title }}</a></h1>
 
     <p class="entry-date">{{ page.date|date:"%Y-%m-%d" }} <span class="lastModified" style="display: none;" data-source="{{ page.path }}">最后更新时间: </span></p>
-<!--  -->
-<div class="ds-share" data-thread-key="{{ page.id }}" data-title="{{ page.title }}"
-     data-images="http://www.uimaker.com/uploads/allimg/111101/1_111101085050_5.png" data-content="content"
-     data-url="http://litaotao.github.io/{{ page.id }}">
-    <div class="ds-share-aside-left">
-      <div class="ds-share-aside-inner">
-      </div>
-      <div class="ds-share-aside-toggle">分享到</div>
-    </div>
-</div>
-<!--  -->
+
+
     {{ content }}
+
+    <!-- share icon -->
+    <div class="ds-share" data-thread-key="{{ page.id }}" data-title="{{ page.title }}"
+         data-content="content"
+         data-url="http://litaotao.github.io/{{ page.id }}">
+        <div class="ds-share-aside-left">
+          <div class="ds-share-aside-inner">
+          </div>
+          <div class="ds-share-aside-toggle">分享</div>
+        </div>
+    </div>
 
     <div id="disqus_container">
       <div style="margin-bottom:20px">
@@ -73,5 +75,6 @@ layout: default
     <div id="menu"></div>
   </div>
 </div>
+
 
 <script src="/js/post.js" type="text/javascript"></script>
