--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -12,7 +12,7 @@ layout: default
     -o-background-size: cover;
     background-size: cover;
   }
-  body { background:transparent; }
+  /*body { background:transparent;}*/
   @media screen and (max-width: 750px){
     body { background: rgba(255, 255, 255, 0.9); }
   }
