--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -67,9 +67,9 @@ layout: default
     <div class="myinfo"><center>
       <div id="avatarHolder" class="avatar circle" style="width: 0px; height: 0px; box-shadow: none; margin-bottom: 20px;"></div>
       <a href="/index.html" title="Homepage"><i class="icon-home icon-large"></i> Home</a>
-      <a href="{{ site.myblog.linkedin }}"><i class="icon-linkedin-sign icon-large"></i><span> Profile</span></a>
-      <a href="{{ site.myblog.github }}"><i class="icon-github icon-large"></i><span> Code</span></a>
-      <a href="{{ site.myblog.email }}"><i class="icon-envelope-alt icon-large"></i><span> Mail</span></a>
+      <a href="{{ site.myblog.linkedin }}"><i class="icon-linkedin-sign icon-large"></i> Profile</a>
+      <a href="{{ site.myblog.github }}"><i class="icon-github icon-large"></i> Code</a>
+      <a href="{{ site.myblog.email }}"><i class="icon-envelope-alt icon-large"></i> Mail</a>
     </center></div>
     <div id="menu"></div>
   </div>
