update email icon in post page update learning spark book memo

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -69,7 +69,7 @@ layout: default
       <a href="/index.html" title="Homepage"><i class="icon-home icon-large"></i> Home</a>
       <a href="{{ site.myblog.linkedin }}"><i class="icon-linkedin-sign icon-large"></i> Profile</a>
       <a href="{{ site.myblog.github }}"><i class="icon-github icon-large"></i> Code</a>
-      <a href="{{ site.myblog.email }}"><i class="icon-envelope-alt icon-large"></i> Mail</a>
+      <a href="{{ site.myblog.email }}"><i class="icon-envelope icon-large"></i> Mail</a>
     </center></div>
     <div id="menu"></div>
   </div>
