--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -67,6 +67,10 @@ layout: default
     </div>
   </div>
 
+  <div>
+      <script type="text/javascript">var cnzz_protocol = (("https:" == document.location.protocol) ? " https://" : " http://");document.write(unescape("%3Cspan id='cnzz_stat_icon_1258855744'%3E%3C/span%3E%3Cscript src='" + cnzz_protocol + "s11.cnzz.com/z_stat.php%3Fid%3D1258855744' type='text/javascript'%3E%3C/script%3E"));</script>
+  </div>
+
   <div id="menuIndex" class="sidenav">
     <div class="myinfo"><center>
       <div id="avatarHolder" class="avatar circle" style="width: 0px; height: 0px; box-shadow: none; margin-bottom: 20px;"></div>
@@ -78,6 +82,5 @@ layout: default
     <div id="menu"></div>
   </div>
 </div>
-
 
 <script src="/js/post.js" type="text/javascript"></script>
