--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -34,7 +34,7 @@ layout: default
     {{ content }}
 
     <!-- share icon -->
-    <div class="ds-share" data-thread-key="{{ page.id }}" data-title="{{ page.title }}"
+    <!-- <div class="ds-share" data-thread-key="{{ page.id }}" data-title="{{ page.title }}"
          data-content="content"
          data-url="http://litaotao.github.io/{{ page.id }}">
         <div class="ds-share-aside-left">
@@ -43,6 +43,11 @@ layout: default
           <div class="ds-share-aside-toggle">分享</div>
         </div>
     </div>
+ -->
+    <!-- 百度分享按钮 -->
+
+<script>window._bd_share_config={"common":{"bdSnsKey":{},"bdText":"","bdMini":"1","bdMiniList":false,"bdPic":"","bdStyle":"0","bdSize":"16"},"slide":{"type":"slide","bdImg":"7","bdPos":"left","bdTop":"118"},"image":{"viewList":["weixin","qzone","tsina","tqq","renren","sqq","evernotecn","youdao"],"viewText":"分享到：","viewSize":"16"},"selectShare":{"bdContainerClass":null,"bdSelectMiniList":["weixin","qzone","tsina","tqq","renren","sqq","evernotecn","youdao"]}};with(document)0[(getElementsByTagName('head')[0]||body).appendChild(createElement('script')).src='http://bdimg.share.baidu.com/static/api/js/share.js?v=89860593.js?cdnversion='+~(-new Date()/36e5)];</script>
+
 
     <div id="disqus_container">
       <div style="margin-bottom:20px">
