--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -5,7 +5,8 @@ layout: default
 <link rel="stylesheet" href="/js/prettify/prettify.css" />
 <style type="text/css">
   html {
-    background: #333333;
+    /*background: #333333;*/
+    background: rgb(246, 246, 246);
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
