almost responsive for all size

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,9 +13,9 @@
   <link rel="stylesheet" href="/css/font-awesome/css/font-awesome.min.css" type="text/css" />
   <script src="/files/dc3da690b0d2a5655a8d6150862a2a07.html"></script>
   <!-- <link rel="stylesheet" href="/css/pygments.css" type="text/css" /> -->
-  <link rel="stylesheet" href="/css/default.css" type="text/css" />
+  <link rel="stylesheet" href="/css/default-min.css" type="text/css" />
   <link rel="stylesheet" href="/css/desktop-min.css" type="text/css" />
-  <link rel="stylesheet" href="/css/mobile.css" type="text/css" />
+  <link rel="stylesheet" href="/css/mobile-min.css" type="text/css" />
   <link rel="shortcut icon" href="/css/favicon.ico" type="image/x-icon" />
   <link rel="icon" href="/css/favicon.ico" mce_href="/favicon.ico" type="image/x-icon">
   <link rel="alternate" type="application/atom+xml" title="Recent Entries" href="{{ site.feed }}" />
