--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -72,11 +72,7 @@ layout: default
       </div>
     </div>
   </div>
-
-  <div>
-      <script type="text/javascript">var cnzz_protocol = (("https:" == document.location.protocol) ? " https://" : " http://");document.write(unescape("%3Cspan id='cnzz_stat_icon_1258855744'%3E%3C/span%3E%3Cscript src='" + cnzz_protocol + "s11.cnzz.com/z_stat.php%3Fid%3D1258855744' type='text/javascript'%3E%3C/script%3E"));</script>
-  </div>
-
+  
   <div id="menuIndex" class="sidenav">
     <div class="myinfo"><center>
       <div id="avatarHolder" class="avatar circle" style="width: 0px; height: 0px; box-shadow: none; margin-bottom: 20px;"></div>
@@ -90,3 +86,9 @@ layout: default
 </div>
 
 <script src="/js/post.js" type="text/javascript"></script>
+<script type="text/javascript">
+    //博文页面也做一下刷新操作，避免有时候切换横竖屏时格式不对的问题  
+    $( window ).resize(function() { 
+        location.reload(); 
+    });
+</script>
