add present mode

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -24,7 +24,7 @@ layout: default
   </div>
 
   <div class="entry" style="position: relative;">
-    <h1 class="entry-title"><a href="{{ page.url }}" title="{{ page.title }}">{{ page.title }}</a></h1>
+    <h1 class="entry-title"><a href="{{ page.url }}" title="{{ page.title }}">{{ page.title }}</a></h1>    
 
     <p class="entry-date">{{ page.date|date:"%Y-%m-%d" }} 
         <span class="lastModified" style="display: none;" data-source="{{ page.path }}">最后更新时间: 
@@ -82,6 +82,7 @@ layout: default
           <a href="{{ site.myblog.linkedin }}"><i class="icon-linkedin-sign icon-large"></i> Profile</a>
           <a href="{{ site.myblog.github }}"><i class="icon-github icon-large"></i> Code</a>
           <a href="{{ site.myblog.email }}"><i class="icon-envelope icon-large"></i> Mail</a>
+          <button onclick="present_mode()"><i class="icon-align-justify icon-large"></i> Present Mode</button>
         </center>
     </div>
     <div id="menu"></div>
