--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -82,7 +82,7 @@ layout: default
           <a href="{{ site.myblog.linkedin }}"><i class="icon-linkedin-sign icon-large"></i> Profile</a>
           <a href="{{ site.myblog.github }}"><i class="icon-github icon-large"></i> Code</a>
           <a href="{{ site.myblog.email }}"><i class="icon-envelope icon-large"></i> Mail</a>
-          <button onclick="present_mode()" style="width: 100%; margin-top: 10px"><i class="icon-align-justify icon-large"></i> Present Mode</button>
+          <button id="present_button" onclick="present_mode()" style="width: 100%; margin-top: 10px; display: none"><i class="icon-align-justify icon-large"></i> Present Mode</button>
         </center>
     </div>
     <div id="menu"></div>
