--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -53,7 +53,8 @@ layout: default
     <div id="disqus_container">
       <div style="margin-bottom:20px">
       <!-- 多说评论框 start -->
-        <div class="ds-thread" data-thread-key={{page.id}} data-title={{page.title}} data-url={{page.url}}></div>
+        <div class="ds-thread" data-thread-key={{page.id}} data-title={{page.title}} 
+             data-url="http://litaotao.github.io/" + {{page.url}}></div>
       <!-- 多说评论框 end -->
       <!-- 多说公共JS代码 start (一个网页只需插入一次) -->
       <script type="text/javascript">
