--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -80,7 +80,7 @@ layout: default
           <div id="avatarHolder" class="avatar circle" style="width: 0px; height: 0px; box-shadow: none; margin-bottom: 20px;">
           </div>
           <a href="/index.html" title="Homepage"><i class="icon-home icon-large"></i> Home</a>
-          <a href="{{ site.myblog.linkedin }}"><i class="icon-linkedin-sign icon-large"></i> Profile</a>
+          <a href="{{ site.myblog.linkedin }}"><i class="icon-linkedin-sign icon-large"></i> Linkedin</a>
           <a href="{{ site.myblog.github }}"><i class="icon-github icon-large"></i> Code</a>
           <a href="{{ site.myblog.email }}"><i class="icon-envelope icon-large"></i> Mail</a>
           <button id="present_button" onclick="present_mode()" style="width: 100%; margin-top: 10px; display: none"><i class="icon-align-justify icon-large"></i> Present Mode</button>
